k8s/apps/forgejo/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo-db
  labels:
    app: forgejo-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: forgejo-db
  template:
    metadata:
      labels:
        app: forgejo-db
    spec:
      nodeSelector:
      containers:
        - name: postgres
          image: postgres:17@sha256:2d2b8998d31037bf721cfdf764d76ba74171b4fab3431b7f72c27c56ddbdf9e3
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: 96Mi
            limits:
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - DAC_OVERRIDE
                - FOWNER
                - SETUID
                - SETGID
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-db-data
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-db
spec:
  selector:
    app: forgejo-db
  ports:
    - port: 5432
      targetPort: 5432
