k8s/apps/forgejo/forgejo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  labels:
    app: forgejo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      nodeSelector:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:16-rootless@sha256:5effb7305584aca479b29fde6f9631a6dbe86ae798ae02eeea33a3666f0c0bf8
          ports:
            - name: web
              containerPort: 3000
            - name: ssh
              containerPort: 2222
              hostPort: 2222
          resources:
            requests:
              memory: 192Mi
            limits:
              memory: 320Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: data
              mountPath: /var/lib/gitea
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-data
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo
spec:
  selector:
    app: forgejo
  ports:
    - name: web
      port: 3000
      targetPort: 3000
